<!-- res/layout/edit_recipe_dialog.xml -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_serving_size"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center"/>

    <EditText
        android:id="@+id/editServingSize"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/enter_serving_size"
        android:inputType="number"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end">

        <Button
            android:textColor="@color/white"
            android:id="@+id/btnUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update"/>

        <Button
            android:textColor="@color/white"
            android:id="@+id/btnClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/close"/>
    </LinearLayout>
</LinearLayout>