<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:padding="10dp"
        android:text="@string/are_you_sure_you_want_to_update_your_inventory_with_the_following_ingredients"
        />

    <ListView
        android:id="@+id/ingredientsListView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/yesButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:text="@string/yes" />

        <Button
            android:id="@+id/noButton"
            android:layout_width="0dp"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/no" />
    </LinearLayout>
</LinearLayout>