<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/home_card_background"
    android:layout_marginTop="5dp"
    android:elevation="5dp"
    android:id="@+id/parentRL"
    android:layout_marginBottom="5dp"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/titleRL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:visibility="gone"
        android:layout_centerHorizontal="true"
        >

        <TextView
            android:id="@+id/firstText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/meal"
            android:textSize="30sp"
            android:textColor="@color/primary_light_color"
            />

        <TextView
            android:id="@+id/secondText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mate"
            android:textSize="30sp"
            android:layout_toEndOf="@id/firstText"
            android:textColor="@color/gray"
            />
        <TextView
            android:id="@+id/thirdText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pizza_emoji"
            android:textSize="30sp"
            android:textColor="@color/gray"
            android:layout_toEndOf="@id/secondText"
            />

    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/itemImageCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        app:cardCornerRadius="20dp">
    <ImageView
        android:id="@+id/itemImageView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:padding="3dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/recipe_image" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/recipeName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/itemImageCard"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="70dp"
        />

    <TextView
        android:id="@+id/recipeDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/recipeName"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="5dp"
        />

</RelativeLayout>