<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="12dp"
    app:cardElevation="10dp"
    app:cardMaxElevation="10dp"
    app:cardPreventCornerOverlap="true"
    android:background="@color/secondary_dark_color"
    android:layout_margin="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@android:color/white"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <TextView
            android:id="@+id/ingt_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="serif"
            android:text="@string/ingredient_name"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/ingt_qty_num"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:fontFamily="serif"
            android:text="@string/ingt_qty_num"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            android:inputType="number"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/ingt_qty_unit"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:fontFamily="serif"
            android:text="@string/ingt_qty_unit"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            android:inputType="text"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>
</androidx.cardview.widget.CardView>
